syntax = "proto3";// 指定protobuf版本
option java_package = "com.sdt.im.protobuf";// 指定包名
option java_outer_classname = "TransMessageProtobuf";// 指定生成的类名

message TransMessage {
        string msgId = 1;               // 消息id
        int32 msgType = 2;              // 消息类型
        int32 msgContentType = 3;       // 消息内容类型
        int64 fromId = 4;               // 消息发送者id
        int64 toId = 5;                 // 消息接收者id
        int64 sendTime = 6;             // 消息时间戳
        int32 statusReport = 7;         // 状态报告
        string extend = 8;              // 扩展字段，以key/value形式存放的json
        string content =9;              // 消息体
}

